--- a/KhanhLinhD3/index.html
+++ b/KhanhLinhD3/index.html
@@ -79,8 +79,8 @@
         <div class="question-list">
             <h2>Lựa chọn biểu đồ trực quan:</h2>
             <ul>
-                <li><a href="KhanhDuy1.html">1. Báo cáo số lượng người bị thương với từng loại va chạm</a></li>
-                <li><a href="KhanhDuy2.html">2. Báo cáo số lượng tác phẩm điêu khắc theo từng chất liệu</a></li>
+                <li><a href="KhanhLinh1.html">1. Báo cáo số lượng người bị thương với từng loại va chạm</a></li>
+                <li><a href="KhanhLinh2.html">2. Báo cáo số lượng tác phẩm điêu khắc theo từng chất liệu</a></li>
             </ul>
         </div>
     </div>
