feat: hover task1 TD

--- a/ThuyDuongD3/index.html
+++ b/ThuyDuongD3/index.html
@@ -80,8 +80,7 @@
             <h2>Lựa chọn biểu đồ trực quan:</h2>
             <ul>
                 <li><a href="ThuyDuong1.html">1. Tìm top 3 nghệ sĩ có nhiều tác phẩm thuộc loại Sculpture nhất</a></li>
-                <li><a href="ThuyDuong2.html">2. Báo cáo số lượng tai nạn không xảy ra va chạm theo từng loại thông tin
-                        chiếu sáng</a></li>
+                <li><a href="ThuyDuong2.html">2. Báo cáo số lượng tai nạn theo điều kiện ánh sáng trong năm 2020 và 2021</a></li>
             </ul>
         </div>
     </div>
