fix: Nhan xet t1 & t2 cua TD

--- a/ThuyDuongD3/ThuyDuong1.html
+++ b/ThuyDuongD3/ThuyDuong1.html
@@ -35,10 +35,9 @@
                 <p>- Thông qua biểu đồ, chúng ta có thể nhận thấy rằng Faxon Russell là nghệ sĩ dẫn đầu với 10 tác phẩm
                     Sculpture, theo sau đó là LeQuire Alan với 7 tác phẩm, và cuối cùng là
                     nghệ sĩ Mims Puryear với số tác phẩm Sculpture là 5. </p>
-                <p>- Với các thông tin được cung cấp từ biểu đồ, ta
-                    có
-                    thể sử dụng những thông tin đó để tôn vinh và ghi nhận sở thích sáng tác
-                    và công lao của các nghệ sĩ trong lĩnh vực nghệ thuật.</p>
+                <p>-Với các thông tin được cung cấp từ biểu đồ, ta có thể sử dụng chúng để tôn vinh 
+                    và ghi nhận sở thích sáng tác và công lao của các nghệ sĩ trong lĩnh vực nghệ thuật.
+                </p>
             </div>
         </div>
     </div>
