--- a/ThuyDuongD3/ThuyDuong2.html
+++ b/ThuyDuongD3/ThuyDuong2.html
@@ -30,19 +30,14 @@
             <p><b>Đánh giá biểu đồ: </b></p>
             <div style="margin-left: 30px;">
                 <p>- Biểu đồ cột chồng minh họa số lượng tai nạn trong năm 2020 và 2021 theo từng điều kiện ánh sáng,
-                    giúp
-                    cung cấp cái nhìn tổng quan
+                    giúp cung cấp cái nhìn tổng quan
                     về tình hình an toàn giao thông đối với các mỗi điều kiện ánh sáng khác nhau.</p>
                 <p>- Thông qua biểu đồ, chúng ta có thể nhận thấy rằng trong cả 2 năm 2020 và 20221, số lượng các vụ tai
-                    nạn
-                    xảy ra nhiều nhất khi điều kiện ánh sáng là DAYLIGHT,
-                    với năm 2020 là 13589, và 2021 là 12167. </p>
-                <p> Theo sau là DARK-LIGHTED có số lượng tai nạn ít hơn gần 3 lần, lần lượt là 4931 (năm 2020) và 4339
-                    vụ
-                    (năm 2021).</p>
-                </p>Do vậy, ở các điều kiện ánh sáng này, nên được chú ý để có những biện pháp nhằm cải thiện an toàn
-                giao
-                thông.</p>
+                    nạn xảy ra nhiều nhất khi điều kiện ánh sáng là DAYLIGHT, với năm 2020 là 13589, và 2021 là 12167. 
+                Theo sau là DARK-LIGHTED có số lượng tai nạn ít hơn gần 3 lần, lần lượt là 4931 (năm 2020) và 4339
+                    vụ (năm 2021).</p>
+                </p>- Qua đó nhờ vào biểu đồ, ta có thể nhận thấy được ở các điều kiện ánh sáng này nên được chú ý để có những
+                     biện pháp nhằm cải thiện an toàn giao thông.</p>
             </div>
         </div>
     </div>
