fix lại title và đổi màu biểu đồ

--- a/HoangDuyD3/HoangDuy2.html
+++ b/HoangDuyD3/HoangDuy2.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 style="text-align: center;">Tỉ lệ chọn các loại hình nghệ thuật để sử dụng cho tác phẩm</h1>
+    <h1 style="text-align: center;"> Các loại hình nghệ thuật tỉ lệ chọn để thực hiện tác phẩm cao </h1>
     <div id="chart-container-task2">
     </div>
 
