--- a/HoangDuyD3/index.html
+++ b/HoangDuyD3/index.html
@@ -80,7 +80,7 @@
             <h2>Lựa chọn biểu đồ trực quan:</h2>
             <ul>
                 <li><a href="HoangDuy1.html">1. Báo cáo số vụ tai nạn Hit-and-run theo từng thành phố</a></li>
-                <li><a href="HoangDuy2.html">2. Tỉ lệ chọn các loại hình nghệ thuật để sử dụng cho tác phẩm</a></li>
+                <li><a href="HoangDuy2.html">2. Báo cáo các loại hình nghệ thuật có tỉ lệ chọn cao  để thực hiện tác phẩm </a></li>
             </ul>
         </div>
     </div>
