--- a/ThuyDuongD3/ThuyDuong1.html
+++ b/ThuyDuongD3/ThuyDuong1.html
@@ -17,13 +17,12 @@
             </p>
             <p><b>Thiết kế biểu đồ:</b></p>
             <div style="margin-left: 30px;">
-                <p>Với yêu cầu này, ta sử dụng 3 thuộc tính là Artist
+                <p>- Với yêu cầu này, ta sử dụng 3 thuộc tính là Artist
                     Last, Artist First - để xác định tên của nghệ sĩ, và CNT(Type) để đếm số
                     lượng các tác phẩm thuộc loại Sculpture.</p>
-                <p>Ta sẽ sử dụng các kênh sau:</p>
-                <p>- Vị trí theo chiều dọc: thuộc tính số lượng các tác phẩm</p>
-                <p>- Vị trí theo chiều ngang: thuộc tính tên nghệ sĩ</p>
-                <p>- Màu sắc để tăng hiệu quả biểu đạt.</p>
+                <p>- Sử dụng kênh horizontal region Artist (Nghệ sĩ), length Quantity of artworks (Số lượng tác phẩm) 
+                    và order theo length phân biệt các nghệ sĩ có số lượng tác phẩm có từ nhiều nhất trở xuống. 
+                </p>
             </div>
         </div>
         <div id="chart-container-task1">
