--- a/ThuyDuongD3/ThuyDuong2.html
+++ b/ThuyDuongD3/ThuyDuong2.html
@@ -16,13 +16,11 @@
             <p><b>Yêu cầu:</b> Báo cáo số lượng tai nạn theo điều kiện ánh sáng trong năm 2020 và 2021</p>
             <p><b>Thiết kế biểu đồ:</b></p>
             <div style="margin-left: 30px;">
-                <p>Với yêu cầu này, ta sử dụng 2 thuộc tính là Illumination Description - để xác định kiểu chiếu sáng,
+                <p>- Với yêu cầu này, ta sử dụng 2 thuộc tính là Illumination Description - để xác định kiểu chiếu sáng,
                     và
                     Date để đếm số lượng các vụ tai nạn mà có năm thuộc vào năm 2020 hoặc 2021.</p>
-                <p>Ta sẽ sử dụng các kênh sau:</p>
-                <p>- Vị trí theo chiều dọc: thuộc tính số lượng các vụ tai nạn trong năm 2020 và 2021</p>
-                <p>- Vị trí theo chiều ngang: thuộc tính điều kiện ánh sáng</p>
-                <p>- Màu sắc để tăng hiệu quả biểu đạt.</p>
+                <p>- Sử dụng kênh Length số lượng vụ tai nạn, màu sắc phân biệt 2 năm 2020 và 2021, 
+                    và Spatial region để biểu thị cho điều kiện ánh sáng (Illumination Description).</p>
             </div>
         </div>
         <div id="chart-container-task2"></div>
@@ -30,7 +28,7 @@
             <p><b>Đánh giá biểu đồ: </b></p>
             <div style="margin-left: 30px;">
                 <p>- Biểu đồ cột chồng minh họa số lượng tai nạn trong năm 2020 và 2021 theo từng điều kiện ánh sáng,
-                    giúp cung cấp cái nhìn tổng quan
+                     giúp cung cấp cái nhìn tổng quan
                     về tình hình an toàn giao thông đối với các mỗi điều kiện ánh sáng khác nhau.</p>
                 <p>- Thông qua biểu đồ, chúng ta có thể nhận thấy rằng trong cả 2 năm 2020 và 20221, số lượng các vụ tai
                     nạn xảy ra nhiều nhất khi điều kiện ánh sáng là DAYLIGHT, với năm 2020 là 13589, và 2021 là 12167. 
