--- a/HoangDuyD3/HoangDuy1.html
+++ b/HoangDuyD3/HoangDuy1.html
@@ -10,15 +10,45 @@
 </head>
 
 <body>
+    <div style="margin-left: 50px;">
+        <h3>Câu hỏi 9:</h3>
+        <div style="margin-left: 30px;">
+            <p><b>Yêu cầu: </b>Báo cáo số lượng các vụ gây tai nạn rồi bỏ trốn (HIT-AND-RUN) theo từng thành phố
+            <p><b>Thiết kế biểu đồ:</b></p>
+            <p>Với yêu cầu này ta sẽ sử dung thuộc tính City để xác định tên thành phố và COUNT(City) để đếm số vụ tai
+                nạn
+                của
+                mỗi thành phố đó</p>
+            <p><b>Ta sẽ sử dụng các kênh sau</b></p>
+            <div style="margin-left: 20px;">
+                <p>- Vị trí theo chiều dọc và chiều dài: thuộc tính số lượng vụ tai nạn</p>
+                <p>- Vị trí theo chiều ngang: Thuộc tính tên các thành phố để thể hiện sự chênh lệch số vụ tai nạn, ta
+                    sử
+                    dụng
+                    biểu đồ cột.
+            </div>
+        </div>
+    </div>
     <h1 style="text-align: center;">Số vụ tai nạn Hit-and-run theo từng thành phố</h1>
     <div id="chart-container-task1">
     </div>
-
-    <div class="comment-container">
-        <p class="comment-text">
-            <span class="bold-text">NHẬN XÉT BIỂU ĐỒ:</span> <br>
-            Biểu đồ cột minh họa số lượng các vụ tai nạn HIT-AND-RUN tại từng thành phố, cung cấp một cái nhìn tổng quan về tình hình an toàn giao thông ở mỗi khu vực. Thông qua biểu đồ, chúng ta có thể nhận thấy rằng một số thành phố có mức độ nghiêm trọng cao hơn so với các khu vực khác. Các thành phố như Nashville, Antioch, Madison có số lượng vụ tai nạn HIT-AND-RUN cao , đặc biệt là Nashville với số lượng cao hơn 6 lần số với thành phố thứ 2 là Antioch. DO vậy ở các thành phố này cần phải tập trung vào việc cải thiện an toàn giao thông, việc tuân thủ luật lệ giao thông và tăng cường giám sát.
-        </p>
+    <div style="margin-left: 80px; margin-top: 50px;">
+        <p><b>Đánh giá biểu đồ:</b></p>
+        <div style="margin-left: 20px;">
+            <p>- Biểu đồ cột minh họa số lượng các vụ tai nạn HIT-AND-RUN tại từng thành phố, cung cấp một cái nhìn tổng
+                quan
+                về tình hình an toàn giao thông ở mỗi khu vực.
+            </p>
+            <p>- Thông qua biểu đồ, chúng ta có thể nhận thấy rằng một số thành phố có mức độ nghiêm trọng cao hơn so
+                với
+                các khu vực khác. Các thành phố như Nashville, Antioch,
+                Madison có số lượng vụ tai nạn HIT-AND-RUN cao , đặc biệt là Nashville với số lượng cao hơn 6 lần số với
+                thành phố thứ 2 là Antioch.
+            </p>
+            <p>- DO vậy ở các thành phố này cần phải tập trung vào việc cải thiện an toàn giao
+                thông, việc tuân thủ luật lệ giao thông và tăng cường giám sát.
+            </p>
+        </div>
     </div>
     <script src="HD_task1.js"></script>
 </body>
