--- a/HoangDuyD3/HoangDuy2.html
+++ b/HoangDuyD3/HoangDuy2.html
@@ -10,15 +10,46 @@
 </head>
 
 <body>
+    <div style="margin-left: 50px ;">
+        <h3>Câu hỏi 10: </h3>
+        <div style="margin-left: 30px ;">
+            <p><b>Yêu cầu: </b>Báo cáo các loại hình nghệ thuật có tỉ lệ chọn để thực hiện tác phẩm cao
+            <p><b>Thiết kế biểu đồ:</b></p>
+            <div style="margin-left: 20px ;">
+                <p>Với yêu cầu này ta sẽ sử dung thuộc tính Type để xác định tên loại hình nghệ thuật và COUNT(Type) để
+                    đếm
+                    số
+                    tác phẩm thuộc các loại hình tương ứng</p>
+            </div>
+            <p><b>Ta sẽ sử dụng các kênh sau:</b></p>
+            <div style="margin-left: 20px ;">
+                <p>- Kênh màu: thuộc tính tên loại hình nghệ thuật <br><br>
+                    - Kênh góc - tilt và kích thước theo vùng - size (area): Thuộc tính ố tác phẩm thuộc các loại hình
+                    tương
+                    ứng
+                    Để thể hiện trực quan về tỉ lệ, ta sử dụng biểu đồ tròn (pie chart)</p>
+            </div>
+        </div>
+    </div>
     <h1 style="text-align: center;"> Các loại hình nghệ thuật tỉ lệ chọn để thực hiện tác phẩm cao </h1>
     <div id="chart-container-task2">
     </div>
-
-    <div class="comment-container">
-        <p class="comment-text">
-            <span class="bold-text">NHẬN XÉT BIỂU ĐỒ:</span> <br>
-            Dựa vào biểu đồ pie chart, ta thấy rằng Sculpture và Mural là hai loại hình nghệ thuật chiếm tỉ lệ cao nhất trong số các loại hình được chọn để thực hiện tác phẩm. Sự ưu tiên cao này có thể cho thấy sự phổ biến và ưa chuộng của hai loại hình này trong cộng đồng nghệ thuật, có thể do khả năng tương tác với không gian công cộng hoặc khả năng thể hiện tác phẩm một cách sáng tạo và độc đáo. Điều này có thể làm nổi bật xu hướng hoặc sự quan tâm đặc biệt của các nghệ sĩ và nhóm nghệ thuật đối với hai loại hình này so với các loại hình khác.
-        </p>
+    <div style="margin-left: 80px;">
+        <p><b>Đánh giá biểu đồ:</b></p>
+        <div style="margin-left: 20px;">
+            <p>
+                Dựa vào biểu đồ pie chart, ta thấy rằng Sculpture và Mural là hai loại hình nghệ thuật chiếm tỉ lệ cao
+                nhất
+                trong số các loại hình được chọn để thực hiện tác phẩm. Sự ưu tiên cao này có thể cho thấy sự phổ biến
+                và ưa
+                chuộng của hai loại hình này trong cộng đồng nghệ thuật, có thể do khả năng tương tác với không gian
+                công
+                cộng hoặc khả năng thể hiện tác phẩm một cách sáng tạo và độc đáo. Điều này có thể làm nổi bật xu hướng
+                hoặc
+                sự quan tâm đặc biệt của các nghệ sĩ và nhóm nghệ thuật đối với hai loại hình này so với các loại hình
+                khác.
+            </p>
+        </div>
     </div>
     <script src="HD_task2.js"></script>
 </body>
