Fix title chart t1 TD

--- a/ThuyDuongD3/ThuyDuong1.html
+++ b/ThuyDuongD3/ThuyDuong1.html
@@ -13,7 +13,7 @@
     <div class="task-1-wrapper">
         <div style="margin-left: 50px;">
             <h3>Câu hỏi 5: </h3>
-            <p><b>Yêu cầu:</b> Tìm top 3 nghệ sĩ có nhiều tác phẩm thuộc loại Scuplture nhất
+            <p><b>Yêu cầu:</b> Báo cáo số lượng tác phẩm của top 3 nghệ sĩ có nhiều tác phẩm thuộc loại Sculpture nhất
             </p>
             <p><b>Thiết kế biểu đồ:</b></p>
             <div style="margin-left: 30px;">
